<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/empty_cart_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingTop="50dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_shopping_cart_is_empty"></TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cart_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/border_grey_2dp"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/text_style_regular"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/number_of_items" />

                        <TextView
                            android:id="@+id/checkout_numberofitems"
                            style="@style/text_style_regular"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:textAlignment="textEnd"
                            tools:text="333" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/text_style_regular"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/subtotal" />

                        <TextView
                            android:id="@+id/checkout_subtotal"
                            style="@style/text_style_regular"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:textAlignment="textEnd"
                            tools:text="$44.45" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/text_style_regular"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/taxes" />

                        <TextView
                            android:id="@+id/checkout_taxes"
                            style="@style/text_style_regular"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:textAlignment="textEnd"
                            tools:text="$44.45" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/text_style_regular"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/fees" />

                        <TextView
                            android:id="@+id/checkout_fees"
                            style="@style/text_style_regular"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:textAlignment="textEnd"
                            tools:text="$44.45" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/text_style_regular_bold"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/total" />

                        <TextView
                            android:id="@+id/checkout_total"
                            style="@style/text_style_regular_bold"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:textAlignment="textEnd"
                            tools:text="$44.45" />
                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_grey_2dp"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <EditText
                        android:id="@+id/checkout_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="text" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="20dp">

                    <Button
                        android:id="@+id/checkout_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:text="@string/checkout"
                        android:textColor="@android:color/white" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>