<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:padding="5dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:background="@drawable/border_grey_2dp"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_style_regular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/orderId" />

                <TextView
                    android:id="@+id/order_detail_orderId"
                    style="@style/text_style_regular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textAlignment="textEnd"
                    tools:text="33322313" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_style_regular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/order_detail_email"
                    style="@style/text_style_regular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textAlignment="textEnd"
                    tools:text="33322313" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_style_regular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/number_of_items" />

                <TextView
                    android:id="@+id/order_detail_numberofitems"
                    style="@style/text_style_regular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textAlignment="textEnd"
                    tools:text="333" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_style_regular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/subtotal" />

                <TextView
                    android:id="@+id/order_detail_subtotal"
                    style="@style/text_style_regular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textAlignment="textEnd"
                    tools:text="$44.45" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_style_regular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/taxes" />

                <TextView
                    android:id="@+id/order_detail_taxes"
                    style="@style/text_style_regular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textAlignment="textEnd"
                    tools:text="$44.45" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_style_regular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/fees" />

                <TextView
                    android:id="@+id/order_detail_fees"
                    style="@style/text_style_regular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textAlignment="textEnd"
                    tools:text="$44.45" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_style_regular_bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/total" />

                <TextView
                    android:id="@+id/order_detail_total"
                    style="@style/text_style_regular_bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textAlignment="textEnd"
                    tools:text="$44.45" />
            </LinearLayout>
        </LinearLayout>


        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/inner_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/order_details_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_grey_2dp"
                android:paddingLeft="2dp"
                android:paddingTop="2dp"
                android:paddingRight="2dp"
                android:paddingBottom="1dp"
                >

            </androidx.recyclerview.widget.RecyclerView>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>