<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/empty_cart_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingTop="50dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_shopping_cart_is_empty"></TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cart_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cart_items_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border_grey_shopping_cart"
                    android:paddingLeft="2dp"
                    android:paddingTop="2dp"
                    android:paddingRight="2dp"
                    android:paddingBottom="1dp"
                    >

                </androidx.recyclerview.widget.RecyclerView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp"
                android:paddingBottom="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="20dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/border_grey_2dp"
                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        style="@style/text_style_regular_bold"
                        android:layout_weight="1"
                        android:text="@string/subtotal" />

                    <TextView
                        android:id="@+id/checkout_subtotal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        style="@style/text_style_regular_bold"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textAlignment="textEnd"
                        tools:text="$44.45" />
                </LinearLayout>

                <Button
                    android:id="@+id/checkout_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/proceed_to_checkout"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>